--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,6 +4,7 @@ references:
   default_docker_ruby_executor: &default_docker_ruby_executor
     image: circleci/ruby:2.6.1
     environment:
+      BUNDLER_VERSION: 2.0.1
       BUNDLE_JOBS: 3
       BUNDLE_RETRY: 3
       BUNDLE_PATH: vendor/bundle
