--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,10 +19,10 @@ jobs:
       - run:
         name: install dependencies
         command: |
-          # gem update --system
-          # gem install bundler
-          echo | sudo gem uninstall bundler 
-          sudo gem install bundler -v 2.0.1
+          gem update --system
+          gem install bundler -v 2.0.1
+          # echo | sudo gem uninstall bundler 
+          # sudo gem install bundler -v 2.0.1
       - run:
         name: Bundle Install
         command: bundle check || bundle install
