--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,23 +29,20 @@ jobs:
       - *default_docker_ruby_executor
     steps:
       - checkout
-      - type: cache-restore
-        name: Restore bundle cache
-        key: circle-ci-{{ checksum "Gemfile.lock" }}
+      - run:
+          name: install dependencies
+          command: |
+            gem update --system
+            gem install bundler
       - run:
           name: Bundle Install
           command: bundle check || bundle install
 
-      - type: cache-save
-        name: Store bundle cache
-        key: your-app-name-{{ checksum "Gemfile.lock" }}
-        paths:
-          - vendor/bundle
       # Run rspec in parallel
       - run:
           command: |
             mkdir /tmp/test-results
-            TESTFILES=$(circleci tests glob "spec/**/*_spec.rb" | circleci tests split --split-by=timings)
+            TESTFILES=$(circleci tests glob "spec/*_spec.rb" | circleci tests split --split-by=timings)
             bundle exec rspec $TESTFILES --profile 10 --format RspecJunitFormatter --out /tmp/test-results/rspec.xml --format progress
       - store_test_results:
           path: /tmp/test-results
