--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,7 +42,7 @@ jobs:
       - run:
           command: |
             mkdir /tmp/test-results
-            TEST_FILES="$(circleci tests glob "spec/*_spec.rb" | circleci tests split --split-by=timings --timings-type=classname)"
+            TEST_FILES="$(circleci tests glob "spec/*_spec.rb")"
             bundle exec rspec --format progress --format RspecJunitFormatter --out /tmp/test-results/rspec.xml --format progress $TEST_FILES
       - store_test_results:
           path: /tmp/test-results
