--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,7 +43,7 @@ jobs:
           command: |
             mkdir /tmp/test-results
             TEST_FILES="$(circleci tests glob "spec/*_spec.rb")"
-            bundle exec rspec --format progress --format RspecJunitFormatter --out /tmp/test-results/rspec.xml --format progress $TEST_FILES
+            bundle exec rspec --format progress --out /tmp/test-results/rspec.xml --format progress $TEST_FILES
       - store_test_results:
           path: /tmp/test-results
       - store_artifacts:
