--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2
 
 references:
   default_docker_ruby_executor: &default_docker_ruby_executor
-    image: circleci/ruby:2.6.1
+    image: circleci/ruby:2.6.1-browsers
     environment:
       BUNDLER_VERSION: 2.0.1
       BUNDLE_JOBS: 3
