--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,17 +37,12 @@ jobs:
       - run:
           name: Bundle Install
           command: bundle check || bundle install
-
+      - run: mkdir ~/rspec
       - run:
-          command: |
-            mkdir /tmp/test-results
-            TEST_FILES="$(circleci tests glob "spec/*_spec.rb")"
-            bundle exec rspec --format progress --out /tmp/test-results/rspec.xml --format progress $TEST_FILES
+          command: bundle exec rspec --format progress --format RspecJunitFormatter -o ~/rspec/rspec.xml
+          when: always
       - store_test_results:
-          path: /tmp/test-results
-      - store_artifacts:
-          path: /tmp/test-results
-          destination: test-results
+          path: ~/rspec
 
 workflows:
   version: 2
