--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,7 +39,7 @@ jobs:
           command: bundle check || bundle install
       - run: mkdir ~/rspec
       - run:
-          command: bundle exec rspec --format documentation progress --format RspecJunitFormatter -o ~/rspec/rspec.xml
+          command: bundle exec rspec --format documentation --format RspecJunitFormatter -o ~/rspec/rspec.xml
           when: always
       - store_test_results:
           path: ~/rspec
